--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(RELATIVE_PATH THIS_DIR ${PROJECT_SOURCE_DIR} ${CMAKE_CURRENT_LIST_DIR})
+set(THIS_DIR "${SOURCE_RELATIVE_PREFIX}/${THIS_DIR}")
 set_relative_path(THIS_DIR_HEADERS ${THIS_DIR}
   Al.hpp
   internal.hpp
