--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -28,43 +28,67 @@ foreach(src ${AL_BENCHMARK_SOURCES})
     add_executable(${_benchmark_exe_name} ${src})
   endif ()
 
+  # Get the test headers
   target_link_libraries(${_benchmark_exe_name}
     PRIVATE Al aluminum_test_headers)
-  if (AL_HAS_CUDA)
+
+  # Use more caution now that "AL_HAS_CUDA" is overloaded.
+  if (AL_HAS_CUDA AND NOT AL_HAS_ROCM)
     target_link_libraries(${_benchmark_exe_name} PUBLIC cuda)
   endif ()
-
-  #target_include_directories(
-  #  ${_benchmark_exe_name} PRIVATE ${CMAKE_SOURCE_DIR}/test)
 endforeach()
 
-# FIXME
-# add_executable(benchmark_overlap.exe benchmark_overlap.cpp
-#   $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
-# target_link_libraries(benchmark_overlap.exe PRIVATE Al aluminum_test_headers)
-# if (AL_HAS_CUDA)
-#   target_link_libraries(benchmark_overlap.exe PUBLIC cuda)
-# endif ()
-# target_include_directories(benchmark_overlap.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
+# Do it all again for "special" benchmarks...
+set_source_path(SPECIAL_BENCHMARK_BASE_SRCS
+  benchmark_overlap.cpp
+  benchmark_pingpong.cpp)
+if (AL_HAS_CUDA OR AL_HAS_ROCM)
+  set_source_path(SPECIAL_BENCHMARK_WAIT_SRCS wait.cu)
+  set_source_path(SPECIAL_BENCHMARK_WAIT_HDRS wait.hpp)
 
-# add_executable(benchmark_pingpong.exe benchmark_pingpong.cpp
-#   $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
-# target_link_libraries(benchmark_pingpong.exe PRIVATE Al aluminum_test_headers)
-# if (AL_HAS_CUDA)
-#   target_link_libraries(benchmark_pingpong.exe PUBLIC cuda)
-# endif ()
-# target_include_directories(benchmark_pingpong.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
+  if (NOT AL_HAS_ROCM)
+    # These have some CUDA-specific idiosyncracies that I haven't
+    # sorted out yet. So we leave them out for now.
+    set_source_path(SPECIAL_BENCHMARK_GPU_SRCS
+      benchmark_events.cpp
+      benchmark_waits.cpp)
+  endif ()
+endif ()
 
-# if (AL_HAS_CUDA)
-#   add_executable(benchmark_events.exe benchmark_events.cpp wait.cu)
-#   target_link_libraries(benchmark_events.exe PRIVATE Al aluminum_test_headers)
-#   target_link_libraries(benchmark_events.exe PUBLIC cuda)
-#   target_include_directories(
-#     benchmark_events.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
+if (AL_HAS_ROCM)
+  hipify_source_files(AL_SPECIAL_BENCHMARK_SOURCES
+    ${SPECIAL_BENCHMARK_BASE_SRCS}
+    ${SPECIAL_BENCHMARK_GPU_SRCS})
+  hipify_source_files(AL_WAIT_SRCS ${SPECIAL_BENCHMARK_WAIT_SRCS})
+  hipify_header_files(AL_WAIT_HDRS ${SPECIAL_BENCHMARK_WAIT_HDRS})
+  set(AL_WAIT_SOURCES ${AL_WAIT_SRCS} ${AL_WAIT_HDRS})
+  add_custom_target(gen_wait_source_files
+    DEPENDS ${AL_WAIT_SOURCES}
+    COMMENT "Generating hipified wait.{hpp,cu} files.")
+else ()
+  set(AL_SPECIAL_BENCHMARK_SOURCES
+    ${SPECIAL_BENCHMARK_BASE_SRCS}
+    ${SPECIAL_BENCHMARK_GPU_SRCS})
+  set(AL_WAIT_SOURCES ${SPECIAL_BENCHMARK_WAIT_SRCS})
+endif ()
 
-#   add_executable(benchmark_waits.exe benchmark_waits.cpp wait.cu)
-#   target_link_libraries(benchmark_waits.exe PRIVATE Al aluminum_test_headers)
-#   target_link_libraries(benchmark_waits.exe PUBLIC cuda)
-#   target_include_directories(
-#     benchmark_waits.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
-# endif ()
+foreach(src ${AL_SPECIAL_BENCHMARK_SOURCES})
+  string(REPLACE ".cpp" ".exe" _tmp_benchmark_exe_name "${src}")
+  get_filename_component(_benchmark_exe_name
+    "${_tmp_benchmark_exe_name}" NAME)
+  if (AL_HAS_ROCM)
+    hip_add_executable(${_benchmark_exe_name} ${src} ${AL_WAIT_SOURCES})
+    target_include_directories(${_benchmark_exe_name} PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>)
+    add_dependencies(${_benchmark_exe_name} gen_wait_source_files)
+  else ()
+    add_executable(${_benchmark_exe_name} ${src} ${AL_WAIT_SOURCES})
+  endif ()
+
+  target_link_libraries(${_benchmark_exe_name}
+    PRIVATE Al aluminum_test_headers)
+
+  if (AL_HAS_CUDA AND NOT AL_HAS_ROCM)
+    target_link_libraries(${_benchmark_exe_name} PRIVATE cuda)
+  endif ()
+endforeach ()
