--- a/src/mpi_cuda/CMakeLists.txt
+++ b/src/mpi_cuda/CMakeLists.txt
@@ -1,4 +1,4 @@
-set_full_path(THIS_DIR_HEADERS
+set_source_path(THIS_DIR_HEADERS
   allgather.hpp
   allreduce.hpp
   alltoall.hpp
@@ -12,25 +12,34 @@ set_full_path(THIS_DIR_HEADERS
   util.hpp
   )
 
-set_full_path(THIS_DIR_CXX_SOURCES
+set_source_path(THIS_DIR_CXX_SOURCES
   communicator.cpp
   )
 
+set_source_path(THIS_DIR_CUDA_RMA_HEADERS
+  rma.hpp
+  rma_ipc.hpp
+  rma_null.hpp
+  rma_self.hpp
+  )
+
+set_source_path(THIS_DIR_CUDA_RMA_CXX_SOURCES
+  rma.cpp
+  )
+
 if (AL_HAS_MPI_CUDA_RMA)
-  list(APPEND THIS_DIR_HEADERS
-    "${CMAKE_CURRENT_SOURCE_DIR}/rma.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/rma_ipc.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/rma_null.hpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/rma_self.hpp")
-  list(APPEND THIS_DIR_CXX_SOURCES
-    "${CMAKE_CURRENT_SOURCE_DIR}/rma.cpp")
+  list(APPEND THIS_DIR_HEADERS "${THIS_DIR_CUDA_RMA_HEADERS}")
+  list(APPEND THIS_DIR_CXX_SOURCES "${THIS_DIR_CUDA_RMA_CXX_SOURCES}")
 endif ()
 
-#set_full_path(THIS_DIR_CUDA_SOURCES
-#  )
+if (AL_HAS_ROCM)
+  hipify_header_files(THIS_DIR_HEADERS_TO_INSTALL ${THIS_DIR_HEADERS})
+else ()
+  set(THIS_DIR_HEADERS_TO_INSTALL ${THIS_DIR_HEADERS})
+endif ()
 
 # Custom install
-install(FILES ${THIS_DIR_HEADERS}
+install(FILES ${THIS_DIR_HEADERS_TO_INSTALL}
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/aluminum/mpi_cuda)
 
 # Propagate the files up the tree
