--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -6,42 +6,35 @@ include(${CMAKE_CURRENT_LIST_DIR}/AluminumConfigVersion.cmake)
 set(ALUMINUM_VERSION ${PACKAGE_VERSION})
 
 set(AL_HAS_CUDA @AL_HAS_CUDA@)
+set(AL_HAS_ROCM @AL_HAS_ROCM@)
 set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
 set(AL_HAS_NCCL @AL_HAS_NCCL@)
+set(AL_HAS_OPENMP @AL_HAS_OPENMP@)
 
 set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@" CACHE FILEPATH
   "The MPI CXX compiler wrapper.")
 find_package(MPI 3.0 REQUIRED COMPONENTS CXX)
 
-find_package(OpenMP QUIET COMPONENTS CXX)
-if (NOT OpenMP_FOUND AND CMAKE_CXX_COMPILER_ID MATCHES ".*[Cc]lang")
-  if (NOT OpenMP_DIR)
-    set(OpenMP_DIR "@OpenMP_DIR@")
-  endif ()
-  include(TryLLVMOpenMP)
-endif ()
-if (OpenMP_FOUND)
-  message(STATUS "Found OpenMP: ${OpenMP_CXX_FLAGS}")
-else ()
-  message(FATAL_ERROR "Aluminum thinks it needs OpenMP. "
-    "If using Clang or a derivative, try setting OpenMP_DIR to point "
-    "to the install prefix of an OpenMP library.")
-endif ()
-
 find_package(HWLOC REQUIRED)
 
-# Fix an issue with OpenMP's egregious use of non-language-specific
-# compiler flags.
-if (OPENMP_FOUND)
+if (AL_HAS_OPENMP)
+  # Fix an issue with OpenMP's egregious use of non-language-specific
+  # compiler flags.
+  find_package(OpenMP REQUIRED COMPONENTS CXX)
   get_target_property(
     __omp_compile_options OpenMP::OpenMP_CXX INTERFACE_COMPILE_OPTIONS)
   set_property(TARGET OpenMP::OpenMP_CXX PROPERTY
     INTERFACE_COMPILE_OPTIONS
     $<$<COMPILE_LANGUAGE:CXX>:${__omp_compile_options}>)
   unset(__omp_compile_options)
-endif ()
+endif (AL_HAS_OPENMP)
 
-if (AL_HAS_CUDA)
+if (AL_HAS_ROCM)
+  find_package(HIP REQUIRED)
+  if (AL_HAS_NCCL)
+    find_package(rccl REQUIRED)
+  endif (AL_HAS_NCCL)
+elseif (AL_HAS_CUDA)
   find_package(CUDA REQUIRED)
 
   if (NOT TARGET cuda::cuda)
@@ -72,7 +65,7 @@ if (AL_HAS_CUDA)
     set_property(TARGET cuda::cuda APPEND
       PROPERTY INTERFACE_LINK_LIBRARIES cuda::nccl)
   endif ()
-endif (AL_HAS_CUDA)
+endif (AL_HAS_ROCM)
 
 @PACKAGE_INIT@
 
