--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -10,6 +10,7 @@ set(AL_HAS_ROCM @AL_HAS_ROCM@)
 set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
 set(AL_HAS_HOST_TRANSFER @AL_HAS_HOST_TRANSFER@)
 set(AL_HAS_NCCL @AL_HAS_NCCL@)
+set(AL_HAS_CUDA_AWARE_MPI @AL_HAS_CUDA_AWARE_MPI@)
 
 set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@" CACHE FILEPATH
   "The MPI CXX compiler wrapper.")
