--- a/include/aluminum/CMakeLists.txt
+++ b/include/aluminum/CMakeLists.txt
@@ -24,6 +24,9 @@ set_source_path(THIS_DIR_HOST_TRANSFER_HEADERS
 set_source_path(THIS_DIR_NCCL_HEADERS
   nccl_impl.hpp
   )
+set_source_path(THIS_DIR_CUDA_AWARE_MPI_HEADERS
+  cuda_aware_mpi_impl.hpp
+  )
 
 add_subdirectory(mpi)
 
@@ -44,6 +47,11 @@ endif ()
 
 if (AL_HAS_NCCL)
   list(APPEND THIS_DIR_HEADERS "${THIS_DIR_NCCL_HEADERS}")
+endif ()
+
+if (AL_HAS_CUDA_AWARE_MPI)
+  list(APPEND THIS_DIR_HEADERS "${THIS_DIR_CUDA_AWARE_MPI_HEADERS}")
+  add_subdirectory(cuda_aware_mpi)
 endif ()
 
 set(ALUMINUM_HEADERS "${HEADERS}" "${THIS_DIR_HEADERS}" PARENT_SCOPE)
