--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,9 @@ set_source_path(THIS_DIR_HOST_TRANSFER_CXX_SOURCES
 set_source_path(THIS_DIR_NCCL_CXX_SOURCES
   nccl_impl.cpp
   )
+set_source_path(THIS_DIR_CUDA_AWARE_MPI_CXX_SOURCES
+  cuda_aware_mpi_impl.cpp
+  )
 
 if (AL_HAS_CUDA)
   list(APPEND THIS_DIR_CXX_SOURCES "${THIS_DIR_CUDA_CXX_SOURCES}")
@@ -38,6 +41,10 @@ endif ()
 
 if (AL_HAS_NCCL)
   list(APPEND THIS_DIR_CXX_SOURCES "${THIS_DIR_NCCL_CXX_SOURCES}")
+endif ()
+
+if (AL_HAS_CUDA_AWARE_MPI)
+  list(APPEND THIS_DIR_CXX_SOURCES "${THIS_DIR_CUDA_AWARE_MPI_CXX_SOURCES}")
 endif ()
 
 set(ALUMINUM_CXX_SOURCES "${CXX_SOURCES}" "${THIS_DIR_CXX_SOURCES}")
