--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ endif ()
 option(ALUMINUM_ENABLE_MPI_CUDA "Enable MPI-CUDA support." OFF)
 option(ALUMINUM_ENABLE_MPI_CUDA_RMA "Enable RMA in MPI-CUDA." OFF)
 option(ALUMINUM_ENABLE_HOST_TRANSFER "Enable host-transfer support." OFF)
+option(ALUMINUM_ENABLE_CUDA_AWARE_MPI "Enable CUDA-aware MPI support." OFF)
 
 if (ALUMINUM_ENABLE_MPI_CUDA_RMA AND NOT ALUMINUM_ENABLE_MPI_CUDA)
   message(STATUS
@@ -65,6 +66,13 @@ endif ()
 if (ALUMINUM_ENABLE_HOST_TRANSFER AND NOT ALUMINUM_HAS_GPU)
   message(STATUS
     "Host-transfer support requested but no GPU runtime enabled. "
+    "Assuming CUDA support.")
+  set(ALUMINUM_ENABLE_CUDA ON)
+endif ()
+
+if (ALUMINUM_ENABLE_CUDA_AWARE_MPI AND NOT ALUMINUM_HAS_GPU)
+  message(STATUS
+    "CUDA-aware MPI support requested but no GPU runtime enabled. "
     "Assuming CUDA support.")
   set(ALUMINUM_ENABLE_CUDA ON)
 endif ()
@@ -102,13 +110,15 @@ option(ALUMINUM_ENABLE_TRACE
 if (ALUMINUM_HAS_GPU
     AND NOT ALUMINUM_ENABLE_NCCL
     AND NOT ALUMINUM_ENABLE_MPI_CUDA
-    AND NOT ALUMINUM_ENABLE_HOST_TRANSFER)
+    AND NOT ALUMINUM_ENABLE_HOST_TRANSFER
+    AND NOT ALUMINUM_ENABLE_CUDA_AWARE_MPI)
   message(FATAL_ERROR
     "CUDA or ROCm has been enabled without a backend. "
     "This should not happen. "
     "Please turn on \"ALUMINUM_ENABLE_NCCL\" and/or "
     "\"ALUMINUM_ENABLE_MPI_CUDA\" and/or "
-    "\"ALUMINUM_ENABLE_HOST_TRANSFER\" and reconfigure.")
+    "\"ALUMINUM_ENABLE_HOST_TRANSFER\" and/or "
+    "\"ALUMINUM_ENABLE_CUDA_AWARE_MPI\" and reconfigure.")
 endif ()
 
 string(TOUPPER "${CMAKE_BUILD_TYPE}" AL_BUILD_TYPE_UPPER)
@@ -202,6 +212,11 @@ if (ALUMINUM_ENABLE_CUDA)
       set(AL_HAS_HOST_TRANSFER TRUE)
     endif ()
 
+    if (ALUMINUM_ENABLE_CUDA_AWARE_MPI)
+      set(AL_HAS_CUDA TRUE)
+      set(AL_HAS_CUDA_AWARE_MPI TRUE)
+    endif ()
+
     # Add the cuda imported target
     if (NOT TARGET cuda::cuda)
       add_library(cuda::cuda INTERFACE IMPORTED)
@@ -231,16 +246,21 @@ if (ALUMINUM_ENABLE_CUDA)
     set(ALUMINUM_ENABLE_MPI_CUDA OFF)
     set(ALUMINUM_ENABLE_HOST_TRANSFER OFF)
     set(ALUMINUM_ENABLE_NCCL OFF)
+    set(ALUMINUM_ENABLE_CUDA_AWARE_MPI OFF)
     set(ALUMINUM_ENABLE_NVPROF OFF)
     set(AL_HAS_CUDA FALSE)
     set(AL_HAS_MPI_CUDA FALSE)
     set(AL_HAS_HOST_TRANSFER FALSE)
     set(AL_HAS_NCCL FALSE)
+    set(AL_HAS_CUDA_AWARE_MPI FALSE)
     set(AL_HAS_NVPROF OFF)
   endif ()
 
   # Check that a backend is found
-  if (NOT AL_HAS_NCCL AND NOT AL_HAS_MPI_CUDA AND NOT AL_HAS_HOST_TRANSFER)
+  if (NOT AL_HAS_NCCL
+      AND NOT AL_HAS_MPI_CUDA
+      AND NOT AL_HAS_HOST_TRANSFER
+      AND NOT AL_HAS_CUDA_AWARE_MPI)
     set(ALUMINUM_ENABLE_CUDA FALSE)
     set(AL_HAS_CUDA FALSE)
   endif ()
@@ -270,6 +290,10 @@ if (ALUMINUM_ENABLE_ROCM)
 
   if (ALUMINUM_ENABLE_HOST_TRANSFER)
     set(AL_HAS_HOST_TRANSFER TRUE)
+  endif ()
+
+  if (ALUMINUM_ENABLE_CUDA_AWARE_MPI)
+    set(AL_HAS_CUDA_AWARE_MPI TRUE)
   endif ()
 
   if (ALUMINUM_ENABLE_NCCL)
