Rename benchmark_allreduces to benchmark_allreduce for consistency.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -3,7 +3,7 @@ set_source_path(BENCHMARK_HDRS
 
 set_source_path(BENCHMARK_SRCS
   benchmark_allgather.cpp
-  benchmark_allreduces.cpp
+  benchmark_allreduce.cpp
   benchmark_alltoall.cpp
   benchmark_bcast.cpp
   benchmark_gather.cpp
