--- a/include/aluminum/mpi/CMakeLists.txt
+++ b/include/aluminum/mpi/CMakeLists.txt
@@ -3,12 +3,16 @@ set_source_path(THIS_DIR_HEADERS
   allgatherv.hpp
   allreduce.hpp
   alltoall.hpp
+  alltoallv.hpp
+  base_state.hpp
   bcast.hpp
   communicator.hpp
   gather.hpp
+  gatherv.hpp
   reduce.hpp
   reduce_scatter.hpp
   scatter.hpp
+  scatterv.hpp
   pt2pt.hpp
   utils.hpp
   )
