Add support for vector reduce-scatter to Al and NCCL.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,6 +41,7 @@ set_source_path(TEST_SRCS
   test_allreduce.cpp
   test_reduce.cpp
   test_reduce_scatter.cpp
+  test_reduce_scatterv.cpp
   test_allgather.cpp
   test_allgatherv.cpp
   test_alltoall.cpp
